# AIC

./: .gitignore  CMakeLists.txt  README.md
inc/: layer.h  matrix.h  neural_network.h  rng.h  serialize.h  wave.h
src/: layer.c  main.c  matrix.c  neural_network.c  rng.c  serialize.c  wave.c
